syntax = "proto3";

package user;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse) {}
  rpc GetDetailManagerAndTotalStaffInDepartment(DetailManagerAndTotalStaffInDepartmentRequest) returns (DetailManagerAndTotalStaffInDepartmentResponse) {}
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  string name = 6;
  string avatar_color = 7;
  string department_id = 8;
}

message DetailManagerAndTotalStaffInDepartmentRequest {
  string department_id = 1;
  string manager_id = 2;
}
message DetailManagerAndTotalStaffInDepartmentResponse{
  int64 total_staff = 1;
  UserResponse manager = 2;
}